Autualização da responsividade

--- a/Carrinho.html
+++ b/Carrinho.html
@@ -16,11 +16,11 @@
         <nav class="menu">
             <ul class="ul-menu">
 
-                <a href="login.html">
+                <a href="login.html" id="perfil">
                     <li><i class="bi bi-file-person"></i></li>
                 </a>
 
-                <li><i class="bi bi-geo-alt"></i>Franca,SP</li>
+                <liid="localizacao"><i class="bi bi-geo-alt"></i>Franca,SP</li>
             </ul>
         </nav>
     </header>
