--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
         <nav class="menu">
             <ul class="ul-menu">
 
-                <a href="login.html">
+                <a href="login.html" id="perfil">
                     <li><i class="bi bi-file-person"></i></li>
                 </a>
 
