--- a/cadastrarproduto.html
+++ b/cadastrarproduto.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="./css/cadastrodeproduto.css">
+    <title>Cadastro de produto</title>
 </head>
 
 <body>
@@ -25,26 +26,26 @@
     </header>
 
     <section>
-        <h1>Cadastrar Produto</h1>
+        <h1 id="titulo">Cadastrar Produto</h1>
 
         <form action="">
-            <div>
-                <label for="">Nome do produto</label>
-                <input type="text">        
+            <div id="div-formulario">
+                <label class="campoform" for="">Nome do produto</label>
+                <input class="inputform" type="text">        
 
-                <label for="">Descrição do Produto</label>
-                <input type="text">
+                <label class="campoform" for="">Descrição do Produto</label>
+                <input class="inputform" type="text">
 
-                <label for="">Categoria</label>
-                <input type="text">
+                <label class="campoform" for="">Categoria</label>
+                <input class="inputform" type="text">
 
-                <label for="">Preço unitário</label>
-                <input type="number">
+                <label class="campoform" for="">Preço unitário</label>
+                <input class="inputform" type="text">
 
-                <label for="">Código de barras</label>
-                <input type="number">           
+                <label class="campoform" for="">Código de barras</label>
+                <input class="inputform"type="text">           
 
-                <button>Cadastrar</button>
+                <button id="botaoform">Cadastrar</button>
             </div>
         </form>
 
