--- a/Produto.html
+++ b/Produto.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/produto.css">
     <title>Produto</title>
 </head>
 
@@ -24,38 +25,40 @@
         </nav>
     </header>
 
-    <section>
+    <section id="inicio">
         <i class="bi bi-chevron-double-left"></i>
         <i class="bi bi-heart-fill"></i>
     </section>
 
-    <section>
-        <h1>Nome do produto</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ullam, non libero aut animi nam veritatis!
+    <section id="produto">
+        <div id="topo">
+        <h1 id="titulo">Nome do produto</h1>
+        <p id="descricao">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ullam, non libero aut animi nam veritatis!
             Quasi tempore molestias accusantium</p>
-
-        <div>
+        </div>
+        <div id="imagem">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgrRwkjCbCdUnqHTZtOtGHlH5Xqrg8ptQna9QQp3QVdiMrnABoRNboVI8EFL2HT_GKqxM&usqp=CAU"
                 alt="produto">
 
-            <div>
+            <div class="quantidade">
                 <i class="bi bi-dash-square"></i>
                 <p>1</p>
                 <i class="bi bi-plus-square"></i>
             </div>
+            <div class="valor">
+                <p>Preço unitário</p>
+                <p>0000000,0</p>
+                <p>Preço total</p>
+                <p>00000000000,0</p>
+            </div>
+    
+            <div id="adicionar">
+                <i class="bi bi-cart-plus"></i>
+                <button>Adicionar ao carrinho</button>
+            </div>
         </div>
 
-        <div>
-            <p>Preço unitário</p>
-            <p>0000000,0</p>
-            <p>Preço total</p>
-            <p>00000000000,0</p>
-        </div>
-
-        <div>
-            <i class="bi bi-cart-plus"></i>
-            <button>Adicionar ao carrinho</button>
-        </div>
+       
 
     </section>
 
