implementação do js

--- a/Carrinho.html
+++ b/Carrinho.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="produto">
-                <h3>Nome do produto</h3>
+                <h3>produto 1</h3>
                 <div class="quantidade">
                     <i class="bi bi-dash-square"></i>
                     <p>1</p>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="produto">
-                <h3>Nome do produto</h3>
+                <h3>produto 2</h3>
                 <div class="quantidade">
                     <i class="bi bi-dash-square"></i>
                     <p>1</p>
@@ -132,6 +132,8 @@
             </li>
         </ul>
     </footer>
+
+    <script src="./js/script-carrinho.js"></script>
 
 </body>
 
