--- a/Produto.html
+++ b/Produto.html
@@ -42,7 +42,7 @@
 
             <div class="quantidade">
                 <i class="bi bi-dash-square"></i>
-                <p>1</p>
+                <p class="quantidade-produto">1</p>
                 <i class="bi bi-plus-square"></i>
             </div>
             <div class="valor">
@@ -95,6 +95,8 @@
             </li>
         </ul>
     </footer>
+
+    <script src="./js/produto.js"></script>
 </body>
 
 </html>
