--- a/login.html
+++ b/login.html
@@ -32,14 +32,16 @@
 
         <!--seção do cliente-->
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgrRwkjCbCdUnqHTZtOtGHlH5Xqrg8ptQna9QQp3QVdiMrnABoRNboVI8EFL2HT_GKqxM&usqp=CAU" alt="">      
-       
+        
+        <section id="mensagemok" class="mensagemok"></section>
+
         <div id="login-div">
             <label class="login" for="">Login</label>
-            <input class="inputlogin" type="text">
+            <input id="login" class="inputlogin" type="text">
             <label class="login" for="">Senha</label>
-            <input class="inputlogin" type="text">
+            <input id="senha" class="inputlogin" type="text">
 
-            <button class="botaologin" >Realizar Login</button>
+            <button id="botaologin" class="botaologin" >Realizar Login</button>
         </div>
     </section>
 
@@ -79,6 +81,8 @@
     </footer>
 
     </main>
+
+    <script src="./js/login.js"></script>
 
 </body>
 
